--- a/3_large/Makefile
+++ b/3_large/Makefile
@@ -6,10 +6,10 @@ include $(ROOT)/envi.rule
 ####################################################
 
 # 先进入 make.rule 文件所在的目录，再运行下面命令
-# export ROOT=`pwd`    # 设置根目录变量 ROOT
+# export ROOT=`pwd`    # 设置根目录变量 ROOT（★暂时变量★）
+# make echo            # 执行查看变量（同时创建所需文件夹）
 # make all             # 执行编译操作
-# make clean           # 执行清除操作
-# make echo            # 执行查看变量
+# make clean           # 执行清除操作（同时创建所需文件夹）
 
 ####################################################
 # 1、定义子 Makefile 文件所在路径。【多个用空格分隔】
@@ -38,17 +38,20 @@ MAKEFILE_CALL := $(subst cd////,cd ,$(MAKEFILE_CALL))
 ####################################################
 
 all:
-	$(ECHO_OFF); \
+	$(ECHO_SET); \
 	$(subst //, && $(MAKE) all;,$(MAKEFILE_CALL)) \
-	$(ECHO_ON)
+	$(ECHO_END)
+	@echo "+-----o2ospring-------------+"
+	@echo "| :-) completed.            |"
+	@echo "+---------------------------+"
 
 clean:
-	$(ECHO_OFF); \
+	$(ECHO_SET); \
 	$(subst //, && $(MAKE) clean;,$(MAKEFILE_CALL)) \
-	$(ECHO_ON)
+	$(ECHO_END)
 
 echo:
-	$(ECHO_OFF); \
+	$(ECHO_SET); \
 	$(subst //, && $(MAKE) echo;,$(MAKEFILE_CALL)) \
-	$(ECHO_ON)
+	$(ECHO_END)
 
