updata [CFLAG_M] and [ROOT]

--- a/3_large/Makefile
+++ b/3_large/Makefile
@@ -1,4 +1,5 @@
 .PHONY: all clean echo
+export ROOT = $(realpath .)
 include $(ROOT)/envi.rule
 
 ####################################################
