--- a/4_stm32f1xx/Makefile
+++ b/4_stm32f1xx/Makefile
@@ -1,4 +1,5 @@
 .PHONY: all clean echo
+export ROOT = $(realpath .)
 include $(ROOT)/envi.rule
 
 ####################################################
