--- a/4_stm32f1xx/Core/Src/Makefile
+++ b/4_stm32f1xx/Core/Src/Makefile
@@ -3,54 +3,54 @@
 ####################################################
 
 # 定义生成目标，包括其路径及文件名【只能是一个对象】
-TARGET = $(ROOT)/build/stm32f1xx
+TARGET = ../../build/objs/stm32f1xx
 
 # 定义中间文件夹，用于存放中间文件【只能是一个对象】
-OBJS_D = $(ROOT)/build/
+OBJS_D = ../../build/objs
 
 # 添加编译源文件，包括路径及文件名【多个用空格分隔】
 # xxx.s复制来源: HAL库\Drivers\CMSIS\Device\ST\STM32F1xx\Source\Templates\gcc
-SRCS_F = $(ROOT)/startup_stm32f103xb.s                                     \
-         $(ROOT)/Core/Src/main.c                                           \
-         $(ROOT)/Core/Src/stm32f1xx_it.c                                   \
-         $(ROOT)/Core/Src/stm32f1xx_hal_msp.c                              \
-         $(ROOT)/Core/Src/system_stm32f1xx.c                               \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c  \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c      \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c   \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c          \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c      \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c   \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c     \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c      \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c   \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c      \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c    \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
+SRCS_F = ../../startup_stm32f103xb.s                                     \
+         ../../Core/Src/main.c                                           \
+         ../../Core/Src/stm32f1xx_it.c                                   \
+         ../../Core/Src/stm32f1xx_hal_msp.c                              \
+         ../../Core/Src/system_stm32f1xx.c                               \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c  \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c      \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c   \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c          \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c      \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c   \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c     \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c      \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c   \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c      \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c    \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
 
 # 添加编译文件夹，要指定文件扩展名【多个用空格分隔】
-SRCS_D = $(ROOT)/modules/led/*.c
+SRCS_D = ../../modules/led/*.c
 
 # 添加编译库文件，包括路径及文件名【多个用空格分隔】
-LIBS   = $(ROOT)/build/libs/delay.a
+LIBS   = ../../build/libs/delay.a
 
 # 添加源码文件及包含文件所在的路径【多个用空格分隔】
-VPATH  = $(ROOT)/                                 \
-         $(ROOT)/Core/Src                         \
-         $(ROOT)/Core/Inc                         \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Src \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Inc \
-         $(ROOT)/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy   \
-         $(ROOT)/Drivers/CMSIS/Device/ST/STM32F1xx/Include \
-         $(ROOT)/Drivers/CMSIS/Include            \
-         $(ROOT)/modules/delay                    \
-         $(ROOT)/modules/led
+VPATH  = ../../                                   \
+         ../../Core/Src                           \
+         ../../Core/Inc                           \
+         ../../Drivers/STM32F1xx_HAL_Driver/Src   \
+         ../../Drivers/STM32F1xx_HAL_Driver/Inc   \
+         ../../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy   \
+         ../../Drivers/CMSIS/Device/ST/STM32F1xx/Include \
+         ../../Drivers/CMSIS/Include              \
+         ../../modules/delay                      \
+         ../../modules/led
 
 # 定义编译器及其环境相关参数
-include $(ROOT)/envi.rule
+include ../../envi.rule
 CFLAG_O += -Wall -Og
 
 # 包含[Makefile]脚本公共代码
-include $(ROOT)/make.rule
+include ../../make.rule
 
