--- a/4_stm32f1xx/modules/delay/Makefile
+++ b/4_stm32f1xx/modules/delay/Makefile
@@ -3,13 +3,13 @@
 ####################################################
 
 # 定义生成文件，包括其路径及文件名【只能是一个对象】
-LIB    = $(ROOT)/build/libs/delay.a
+LIB    = ../../build/libs/delay.a
 
 # 定义中间文件夹，用于存放中间文件【只能是一个对象】
-OBJS_D = $(ROOT)/build
+OBJS_D = ../../build/objs
 
 # 添加编译源文件，包括路径及文件名【多个用空格分隔】
-SRCS_F = $(ROOT)/modules/delay/delay.c
+SRCS_F = delay.c
 
 # 添加编译文件夹，要指定文件扩展名【多个用空格分隔】
 SRCS_D = 
@@ -21,9 +21,9 @@ LIBS   =
 VPATH  = 
 
 # 定义编译器及其环境相关参数
-include $(ROOT)/envi.rule
+include ../../envi.rule
 CFLAG_O += -Wall -O0
 
 # 包含[Makefile]脚本公共代码
-include $(ROOT)/make.rule
+include ../../make.rule
 
