--- a/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/Makefile
+++ b/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/Makefile
@@ -1,11 +1,11 @@
-.PHONY: all clean echo
+.PHONY: all clean echo debug download
 include envi.rule
 
 ####################################################
 # 0、专门为【STM32Fxxx】应用工程增加的参数配置。
 ####################################################
 
-# 开启编译调试信息（不定义表示关闭）
+# 开启编译调试信息（不定义或定义为0表示关闭）
 export DEBUG  = 1
 
 # STM32F103芯片选择: STM32F103x6,STM32F103x8,STM32F103xB,STM32F103xC,
@@ -91,13 +91,23 @@ endef
 
 all:
 	$(subst //, && $(MAKE) all$(LFTAB),$(MAKEFILE_CALL))
-	@echo "+-----o2ospring-------------+"
-	@echo "| :-) completed.            |"
-	@echo "+---------------------------+"
+	@echo "        _\|/_        "
+	@echo "        (o o)        "
+	@echo " +---oOO-(_)-OOo---+ "
+	@echo " |    o2ospring    | "
+	@echo " |                 | "
+	@echo " |  v completed v  | "
+	@echo " +-o0o---------o0o-+ "
 
 clean:
 	$(subst //, && $(MAKE) clean$(LFTAB),$(MAKEFILE_CALL))
 
 echo:
 	$(subst //, && $(MAKE) echo$(LFTAB),$(MAKEFILE_CALL))
+
+debug:
+	$(subst //, && $(MAKE) debug$(LFTAB),$(MAKEFILE_CALL))
+
+download:
+	$(subst //, && $(MAKE) download$(LFTAB),$(MAKEFILE_CALL))
 
