add clean_app target and updata makefile

--- a/4_stm32f1xx/Makefile
+++ b/4_stm32f1xx/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all clean echo debug download
+.PHONY: all clean echo debug download clean_app
 include envi.rule
 
 ####################################################
@@ -37,6 +37,11 @@ MAKEFILE_CALL := $(subst //,/,$(MAKEFILE_CALL))
 MAKEFILE_CALL := $(addsuffix /,$(MAKEFILE_CALL))
 MAKEFILE_CALL := $(addprefix cd////,$(MAKEFILE_CALL))
 MAKEFILE_CALL := $(subst cd////,@cd ,$(MAKEFILE_CALL))
+MAKEFILE_CALL2 := $(addsuffix /,$(word $(words $(MAKEFILE_D)),$(MAKEFILE_D)))
+MAKEFILE_CALL2 := $(subst //,/,$(MAKEFILE_CALL2))
+MAKEFILE_CALL2 := $(addsuffix /,$(MAKEFILE_CALL2))
+MAKEFILE_CALL2 := $(addprefix cd////,$(MAKEFILE_CALL2))
+MAKEFILE_CALL2 := $(subst cd////,@cd ,$(MAKEFILE_CALL2))
 # 定义【换行+Tab格】
 define LFTAB
 
@@ -67,8 +72,10 @@ echo:
 	$(subst //, && $(MAKE) echo$(LFTAB),$(MAKEFILE_CALL))
 
 debug:
-	$(subst //, && $(MAKE) debug$(LFTAB),$(MAKEFILE_CALL))
+	$(subst //, && $(MAKE) debug$(LFTAB),$(MAKEFILE_CALL2))
 
 download:
-	$(subst //, && $(MAKE) download$(LFTAB),$(MAKEFILE_CALL))
+	$(subst //, && $(MAKE) download$(LFTAB),$(MAKEFILE_CALL2))
 
+clean_app:
+	$(subst //, && $(MAKE) clean$(LFTAB),$(MAKEFILE_CALL2))
