--- a/4_stm32f1xx/Core/Src/Makefile
+++ b/4_stm32f1xx/Core/Src/Makefile
@@ -51,9 +51,9 @@ SRCS_I = ../../                                   \
 LDS_F  = ../../$(STM32F103XX_LD)
 
 # 定义编译器及其环境相关参数
-include ../../envi.rule
+include ../../makeenvi.mk
 CFLAG_O += -Wall -Og
 
 # 包含[Makefile]脚本公共代码
-include ../../make.rule
+include ../../makecore.mk
 
