--- a/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/Makefile
+++ b/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/Makefile
@@ -1,6 +1,6 @@
 export ROOT = $(realpath .)
 .PHONY: all clean echo debug download clean_app
-include envi.rule
+include makeenvi.mk
 
 ####################################################
 # 0、专门为【STM32Fxxx】应用工程增加的参数配置。
