--- a/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/applications/Makefile
+++ b/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/applications/Makefile
@@ -54,9 +54,9 @@ SRCS_I = ../../../../include                      \
 LDS_F  = ../$(STM32F103XX_LD)
 
 # 定义编译器及其环境相关参数
-include ../envi.rule
+include ../makeenvi.mk
 CFLAG_O += -Wall -Og
 
 # 包含[Makefile]脚本公共代码
-include ../make.rule
+include ../makecore.mk
 
