--- a/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/mk_hal/Makefile
+++ b/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/mk_hal/Makefile
@@ -56,9 +56,9 @@ SRCS_I = ../board                                 \
          ../../libraries/STM32F1xx_HAL/CMSIS/Include
 
 # 定义编译器及其环境相关参数
-include ../envi.rule
+include ../makeenvi.mk
 CFLAG_O += -Wall -Og
 
 # 包含[Makefile]脚本公共代码
-include ../make.rule
+include ../makecore.mk
 
