--- a/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/mk_rtt/Makefile
+++ b/5_rt-thread/bsp/stm32/stm32f103-atk-warshipv3/mk_rtt/Makefile
@@ -59,9 +59,9 @@ SRCS_I = ../                                      \
          ../../../../components/finsh
 
 # 定义编译器及其环境相关参数
-include ../envi.rule
+include ../makeenvi.mk
 CFLAG_O += -Wall -Og
 
 # 包含[Makefile]脚本公共代码
-include ../make.rule
+include ../makecore.mk
 
